# azimut-ha-integration

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CODECOV_SETUP.md  HOME_ASSISTANT_INTEGRATION.md  README.md  __init__.py  config_flow.py  const.py  coverage.json  hacs.json  init.py  manifest.json  mqtt_client.py  pyproject.toml  requirements_test.txt  sensor.py  strings.json  websocket_manager.py
.devcontainer/: README.md  configuration.yaml  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
custom_components/azimut_energy/: __init__.py  binary_sensor.py  config_flow.py  diagnostics.py  manifest.json  mqtt_client.py  sensor.py  strings.json
custom_components/azimut_energy/translations/: de.json  en.json  fr.json  nl.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_config_flow_serial.py  test_diagnostics.py  test_init.py  test_mqtt_client.py  test_sensor.py
translations/: en.json  fr.json  nl.json
